--- a/conf/application.conf
+++ b/conf/application.conf
@@ -351,3 +351,12 @@ db {
   # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
   #default.logSql=true
 }
+
+# Akka Logging
+akka {
+  loggers = ["akka.event.slf4j.Slf4jLogger"]
+  loglevel = "DEBUG"
+  logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
+}
+
+//play.modules.enabled += "actors.module.ActorsModule"
